--- a/src/main/App.css
+++ b/src/main/App.css
@@ -12,15 +12,31 @@ body::-webkit-scrollbar {
     border: 3px solid rgb(255, 255, 255);  /* creates padding around scroll thumb */
   }
 
-.App{
+.App,
+.DAWS,
+.windows,
+.mac,
+.linux,
+.pianos,
+.drums,
+.orchestra,
+.orchestra,
+.guitar,
+.plugins,
+.acoustic-guitars,
+.bass,
+.world-music,
+.percussion,
+.Synth{
     position: absolute;
     width: 100%;
     height: 125vh;
 
-    background: black;
+    background: rgb(156, 156, 156);
     color: white;
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
