--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,4 +1,21 @@
-.titles{
+.items-details::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
+.items-details::-webkit-scrollbar-track {
+    background: rgba(224, 224, 224, 0.507);
+    /* color of the tracking area */
+}
+
+.items-details::-webkit-scrollbar-thumb {
+    background-color: rgb(36, 36, 36);
+    /* color of the scroll thumb */
+    border-radius: 20px;
+    /* roundness of the scroll thumb */
+}
+
+.titles {
     position: absolute;
     width: 100%;
     top: 15vh;
@@ -8,11 +25,12 @@
     color: white;
     font-weight: 600;
 }
-.title-painel{
+
+.title-painel {
     letter-spacing: 5px;
 }
 
-.items-painel{
+.items-painel {
     position: absolute;
     width: 100%;
     height: 150vh;
@@ -23,14 +41,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
-.items-details{
+.items-details {
     position: absolute;
     top: 45vh;
     width: 60%;
     height: 100vh;
-    background: rebeccapurple;
+    background: rgba(102, 51, 153, 0.658);
+    backdrop-filter: blur(15px);
     border-radius: 10px;
 
     display: flex;
@@ -40,7 +60,7 @@
     overflow-y: auto;
 }
 
-.descri-item-painel{
+.descri-item-painel {
     margin-top: 7vh;
     width: 80%;
     display: flex;
@@ -49,7 +69,7 @@
     align-items: center;
 }
 
-.items-details img{
+.items-details img {
     margin-top: 2vh;
     width: 60%;
 }
@@ -70,7 +90,7 @@
 .windows-painel,
 .mac-painel,
 .linux-painel,
-.synth-painel{
+.synth-painel {
     position: absolute;
     width: 60%;
     height: 125vh;
@@ -84,19 +104,19 @@
     overflow-y: auto;
 }
 
-.windows-painel{
+.windows-painel {
     background: rgb(26, 44, 70);
 }
 
-.mac-painel{
-    background: linear-gradient(to top,rgb(107, 107, 107),rgb(187, 187, 187)) ;
+.mac-painel {
+    background: linear-gradient(to top, rgb(107, 107, 107), rgb(187, 187, 187));
 }
 
-.linux-painel{
-    background: linear-gradient(to top,rgb(78, 0, 131),rgb(121, 44, 0)) ; 
+.linux-painel {
+    background: linear-gradient(to top, rgb(78, 0, 131), rgb(121, 44, 0));
 }
 
-.magnetic-button{
+.magnetic-button {
     cursor: pointer;
     background: rgb(0, 145, 19);
     width: 200px;
@@ -105,5 +125,10 @@
     justify-content: center;
     align-items: center;
     margin: 4vh;
-    border-radius: 4px ;
+    border-radius: 4px;
+}
+
+#painel-img-interface {
+    width: 150%;
+    opacity: .5;
 }
